@@ -43,7 +43,6 @@ cache cache_{{ conf.id }}
     {{ conf.custom_haproxy_conf }}
 
     ### Timeouts ###
-    #timeout connect {{conf.timeout_connect}}ms
     timeout client {{conf.timeout_client}}s
     {% if conf.mode in ["log", "filebeat"] -%}
     timeout server 0
